# SkillBox_prod

./: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
