[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Fedorov Semen <FedorovSemen28@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
gunicorn = "^22.0.0"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
pillow = "^10.3.0"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
